--- a/contact.html
+++ b/contact.html
@@ -31,10 +31,11 @@
         <div class="hero-inner">
           <header>
 
-        <h1>Contact & Team Information</h1>
+        <h1>Contact & Information</h1>
         
     </header>
-           <section class="contact">
+
+    <section class="contact">
       <p>If you have any questions, or want to book tickets online, please contact us anytime via email below</p>
       <form id="contactForm" class="contact-form" onsubmit="return validateForm(event)"> // javascript
         <label for="name">Name</label>
@@ -70,6 +71,7 @@
         return true;
       }
       </script>
+      
 
       <ul>
           <li><strong>Information:</strong> <a href=https://taplink.cc/tnbts?fbclid=PAZXh0bgNhZW0CMTEAAaekubRKPvzrvzfBoUes-56yYpZzLgVXTbauMOpCcKV9-xebCty-l9Kb-5R__w_aem_yK1R_M9h8OnBaaPK3udl0Q>bbtnbromotenggersemeru</a></li>
@@ -122,3 +124,4 @@
   </div>
 </body>
 </html>
+
