--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 
     <section class="contact">
       <p>If you have any questions, or want to book tickets online, please contact us anytime via email below</p>
-      <form id="contactForm" class="contact-form" onsubmit="return validateForm(event)"> // javascript
+      <form id="contactForm" class="contact-form" onsubmit="return validateForm(event)">
         <label for="name">Name</label>
         <input type="text" id="name" name="name" placeholder="Nama lengkap" required>
       
